always rebuild on path to live

--- a/.github/workflows/workflow_path_to_live.yml
+++ b/.github/workflows/workflow_path_to_live.yml
@@ -26,6 +26,8 @@ jobs:
   create_tags:
     name: Create Tags
     uses: ./.github/workflows/tags_job.yml
+    with:
+      changes_detected: 'true'
 
   go_unit_tests:
     name: Run Go unit tests
