MLPAB-515: Pass language parameter to GOVUK Sign In (#236)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
     environment:
       - PUBLIC_URL=http://localhost:7012
       - CLIENT_ID=client-id-value
+      - REDIRECT_URL=http://localhost:5050/auth/redirect
 
   pay-mock:
     image: stoplight/prism:4.11.0
