--- a/.github/workflows/docker_job.yml
+++ b/.github/workflows/docker_job.yml
@@ -58,4 +58,9 @@ jobs:
           ECR_REPOSITORY: modernising-lpa/app
         run: |
           docker tag app:latest $ECR_REGISTRY/$ECR_REPOSITORY:${{ inputs.tag }}
+          if github.ref == 'refs/heads/main'
+          then
+            docker tag app:latest $ECR_REGISTRY/$ECR_REPOSITORY:latest
+            docker tag app:latest $ECR_REGISTRY/$ECR_REPOSITORY:main
+          fi
           docker push --all-tags $ECR_REGISTRY/$ECR_REPOSITORY
