fix ptl tag condition

--- a/.github/workflows/docker_job.yml
+++ b/.github/workflows/docker_job.yml
@@ -58,8 +58,7 @@ jobs:
           ECR_REPOSITORY: modernising-lpa/app
         run: |
           docker tag app:latest $ECR_REGISTRY/$ECR_REPOSITORY:${{ inputs.tag }}
-          if github.ref == 'refs/heads/main'
-          then
+          if ${{ github.ref == 'refs/heads/main' }}; then
             docker tag app:latest $ECR_REGISTRY/$ECR_REPOSITORY:latest
             docker tag app:latest $ECR_REGISTRY/$ECR_REPOSITORY:main-${{ inputs.tag }}
           fi
