--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -28,8 +28,7 @@ jobs:
     uses: ./.github/workflows/slack_job.yml
     with:
       channel-id: C03RDLFC799
-    secrets:
-      slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }} # pragma: allowlist secret
+    secrets: inherit # pragma: allowlist secret
 
   # detect_changes:
   #   name: Detect Changes
