--- a/.github/workflows/slack_job.yml
+++ b/.github/workflows/slack_job.yml
@@ -5,10 +5,10 @@ on:
         description: 'Slack channel id, channel name, or user id to post message.'
         required: true
         type: string
-    secrets:
-      slack-bot-token:
-        description: 'A token passed from the caller workflow'
-        required: false
+    # secrets:
+    #   slack-bot-token:
+    #     description: 'A token passed from the caller workflow'
+    #     required: false
 
 defaults:
   run:
@@ -40,4 +40,4 @@ jobs:
             ]
           }
       env:
-        SLACK_BOT_TOKEN: ${{ secrets.slack-bot-token }}
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
