--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -27,7 +27,7 @@ jobs:
     name: Post slack message
     uses: ./.github/workflows/slack_job.yml
     with:
-      channel-id: "C03RDLFC799"
+      channel-id: opg-mlpa-devs
     secrets: inherit # pragma: allowlist secret
       # slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }} # pragma: allowlist secret
 
