--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -28,8 +28,9 @@ jobs:
     uses: ./.github/workflows/slack_job.yml
     with:
       channel-id: opg-mlpa-devs
-    secrets: inherit # pragma: allowlist secret
-      # slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }} # pragma: allowlist secret
+    secrets:
+      slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }} # pragma: allowlist secret
+    # secrets: inherit # pragma: allowlist secret
 
   # detect_changes:
   #   name: Detect Changes
