--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -27,21 +27,42 @@ jobs:
     name: Post slack message
     uses: ./.github/workflows/slack_job.yml
     with:
-      # channel-id: opg-mlpa-dev
-      channel-id: opg-modernisinglpa-chat
-      # payload: |
-      #   {
-      #     "text": "Test message for PR: ${{ github.event.pull_request.title }}",
-      #     "blocks": [
-      #       {
-      #         "type": "section",
-      #         "text": {
-      #           "type": "mrkdwn",
-      #           "text": "PR: ${{ github.event.pull_request.title }}"
-      #         }
-      #       }
-      #     ]
-      #   }
+      channel-id: opg-mlpa-dev
+      # channel-id: opg-modernisinglpa-chat
+      payload: |
+        {
+          "icon_emoji": ":exclamation:",
+          "blocks": [
+            {
+              "type": "header",
+              "text": {
+                "type": "plain_text",
+                "text": "Test message from github actions",
+                "emoji": true
+              }
+            },
+            {
+              "type": "section",
+              "fields": [
+                {
+                  "type": "mrkdwn",
+                  "text": "*Status:*\nTesting messages for path to live failures"
+                },
+                {
+                  "type": "mrkdwn",
+                  "text": "*Started by:*\n ${{ github.triggering_actor }}"
+                }
+              ]
+            },
+            {
+              "type": "section",
+              "text": {
+                "type": "mrkdwn",
+                "text": "<https://github.com/ministryofjustice/opg-modernising-lpa/actions/runs/${{github.run_id}}|View workflow>"
+              }
+            }
+          ]
+        }
     secrets:
       slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }} # pragma: allowlist secret
     # secrets: inherit # pragma: allowlist secret
