--- a/.github/workflows/slack_job.yml
+++ b/.github/workflows/slack_job.yml
@@ -5,10 +5,10 @@ on:
         description: 'Slack channel id, channel name, or user id to post message.'
         required: true
         type: string
-      # payload:
-      #   description: 'For posting a rich message using Block Kit'
-      #   required: true
-      #   type: string
+      payload:
+        description: 'For posting a rich message using Block Kit'
+        required: true
+        type: string
     secrets:
       slack-bot-token:
         description: 'A token passed from the caller workflow'
