--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -36,7 +36,7 @@ jobs:
               "type": "header",
               "text": {
                 "type": "plain_text",
-                "text": ":exclamation: Test message: @modernising-lpa-devs Path to Live workflow is failing",
+                "text": ":exclamation: Test message: <!subteam^S03RPSWH0KF> Path to Live workflow is failing",
                 "emoji": true
               }
             },
