test layer cache-from and target approach

--- a/.github/workflows/docker_job.yml
+++ b/.github/workflows/docker_job.yml
@@ -21,10 +21,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Pull layers
+        id: pull_layers
+        env:
+          ECR_REGISTRY: ${{ steps.login_ecr.outputs.registry }}
+          ECR_REPOSITORY: modernising-lpa/app
+        run: |
+          docker pull $ECR_REGISTRY/$ECR_REPOSITORY:assets || true
+          docker pull $ECR_REGISTRY/$ECR_REPOSITORY:build || true
       - name: Build Image
         id: build_image
+        env:
+          ECR_REGISTRY: ${{ steps.login_ecr.outputs.registry }}
+          ECR_REPOSITORY: modernising-lpa/app
         run: |
-          docker build -t app .
+          docker build --target asset-env --cache-from $ECR_REGISTRY/$ECR_REPOSITORY:assets -t $ECR_REGISTRY/$ECR_REPOSITORY:assets .
+          docker build --target build-env --cache-from $ECR_REGISTRY/$ECR_REPOSITORY:build -t $ECR_REGISTRY/$ECR_REPOSITORY:build .
+
+          docker build --cache-from $ECR_REGISTRY/$ECR_REPOSITORY:assets --cache-from $ECR_REGISTRY/$ECR_REPOSITORY:build -t app .
+
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:assets
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:build
       - name: Trivy Image Vulnerability Scanner
         id: trivy_scan
         uses: aquasecurity/trivy-action@0.8.0
