--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -35,21 +35,21 @@ jobs:
     with:
       changes_detected: ${{ needs.detect_changes.outputs.changes_detected }}
 
-  go_unit_tests:
-    name: Run Go unit tests
-    if: needs.detect_changes.outputs.changes_detected == 'true'
-    needs: create_tags
-    uses: ./.github/workflows/go-unit-tests.yml
+#  go_unit_tests:
+#    name: Run Go unit tests
+#    if: needs.detect_changes.outputs.changes_detected == 'true'
+#    needs: create_tags
+#    uses: ./.github/workflows/go-unit-tests.yml
 
   docker_build_scan_push:
     name: Docker Build, Scan and Push
-    if: |
-      always() &&
-      (needs.detect_changes.outputs.changes_detected == 'true') &&
-      (needs.go_unit_tests.result == 'success' || needs.go_unit_tests.result == 'skipped')
+#    if: |
+#      always() &&
+#      (needs.detect_changes.outputs.changes_detected == 'true') &&
+#      (needs.go_unit_tests.result == 'success' || needs.go_unit_tests.result == 'skipped')
     uses: ./.github/workflows/docker_job.yml
     needs: [
-      go_unit_tests,
+#      go_unit_tests,
       create_tags
       ]
     with:
