Rename make command and ignore workspace.json

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ geckodriver.log
 **/environment_config.json
 
 .structurizr
+docs/architecture/dsl/workspace.json
+
 .python-version
 .pytest_cache
 .coverage
