--- a/.codecov.yml
+++ b/.codecov.yml
@@ -7,6 +7,7 @@ coverage:
     - "./mocks/*"
     - "./app/internal/identity/yoti*"
     - "./app/internal/telemetry"
+    - "./app/internal/page/mock.go"
   status:
     project:
       default:
