--- a/.github/workflows/docker_job.yml
+++ b/.github/workflows/docker_job.yml
@@ -5,6 +5,11 @@ on:
         description: 'Tag for docker image'
         required: true
         type: string
+      checkout_tag:
+        description: 'Ref or tag to checkout'
+        default: ${{ github.ref }}
+        required: false
+        type: string
 
 defaults:
   run:
@@ -21,6 +26,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.checkout_tag }}
       - name: Build Image
         id: build_image
         run: |
