--- a/.github/workflows/terraform_environment_job.yml
+++ b/.github/workflows/terraform_environment_job.yml
@@ -19,6 +19,11 @@ on:
       url:
         description: "URL for environment"
         value: ${{ jobs.terraform_environment_workflow.outputs.url }}
+      checkout_tag:
+        description: 'Ref or tag to checkout'
+        default: ${{ github.ref }}
+        required: false
+        type: string
 jobs:
   terraform_environment_workflow:
     runs-on: ubuntu-latest
@@ -29,6 +34,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          ref: ${{ inputs.checkout_tag }}
           fetch-depth: '0'
       - uses: unfor19/install-aws-cli-action@v1
       - uses: hashicorp/setup-terraform@v2
