--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -20,6 +20,11 @@ on:
         required: false
         type: string
         default: cypress/e2e/**.cy.js
+      checkout_tag:
+        description: 'Ref or tag to checkout'
+        default: ${{ github.ref }}
+        required: false
+        type: string
 
 defaults:
   run:
@@ -30,6 +35,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.checkout_tag }}
       - uses: unfor19/install-aws-cli-action@v1
         name: Run Against Image/aws-cli-action
         if: inputs.run_against_image
