--- a/.github/workflows/docker_job.yml
+++ b/.github/workflows/docker_job.yml
@@ -7,7 +7,7 @@ on:
         type: string
       checkout_tag:
         description: 'Ref or tag to checkout'
-        default: ${{ github.sha }}
+        default: ${{ github.ref }}
         required: false
         type: string
 
