--- a/.github/workflows/terraform_environment_job.yml
+++ b/.github/workflows/terraform_environment_job.yml
@@ -11,7 +11,7 @@ on:
         type: string
       checkout_tag:
         description: 'Ref or tag to checkout'
-        default: ${{ github.sha }}
+        default: ${{ github.ref }}
         required: false
         type: string
     outputs:
