--- a/.github/workflows/workflow_deploy_to_ur_environment.yml
+++ b/.github/workflows/workflow_deploy_to_ur_environment.yml
@@ -45,10 +45,7 @@ jobs:
 
   ur_deploy:
       name: PR Environment Deploy
-      needs: [
-        docker_build_scan_push,
-        ui_tests_image
-      ]
+      needs: [ui_tests_image]
       uses: ./.github/workflows/terraform_environment_job.yml
       with:
         workspace_name: ur
@@ -80,7 +77,7 @@ jobs:
     environment:
       name: "ur"
       url: "https://${{ needs.ur_deploy.outputs.url }}"
-    needs: [ur_deploy, ui_tests_pr_env]
+    needs: [ui_tests_pr_env]
     steps:
       - name: End of UR Deployment Workflow
         run: |
