--- a/.github/workflows/terraform_environment_job.yml
+++ b/.github/workflows/terraform_environment_job.yml
@@ -9,6 +9,11 @@ on:
         description: 'The docker image tag to deploy in the environment'
         required: true
         type: string
+      checkout_tag:
+        description: 'Ref or tag to checkout'
+        default: ${{ github.ref }}
+        required: false
+        type: string
     outputs:
       terraform_workspace_name:
         description: "Name of Terraform workspace"
@@ -19,6 +24,7 @@ on:
       url:
         description: "URL for environment"
         value: ${{ jobs.terraform_environment_workflow.outputs.url }}
+
 jobs:
   terraform_environment_workflow:
     runs-on: ubuntu-latest
@@ -29,6 +35,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          ref: ${{ inputs.checkout_tag }}
           fetch-depth: '0'
       - uses: unfor19/install-aws-cli-action@v1
       - uses: hashicorp/setup-terraform@v2
