--- a/.github/workflows/workflow_deploy_to_ur_environment.yml
+++ b/.github/workflows/workflow_deploy_to_ur_environment.yml
@@ -44,7 +44,7 @@ jobs:
     secrets: inherit # pragma: allowlist secret
 
   ur_deploy:
-      name: PR Environment Deploy
+      name: UR Environment Deploy
       needs: [ui_tests_image]
       uses: ./.github/workflows/terraform_environment_job.yml
       with:
@@ -68,7 +68,7 @@ jobs:
     name: Remove CI ingress from environment
     if: always()
     uses: ./.github/workflows/remove_ingress_job.yml
-    needs: [ui_tests_pr_env]
+    needs: [ui_tests_ur_env]
     secrets: inherit # pragma: allowlist secret
 
   end_of_ur_deployment_workflow:
@@ -77,7 +77,7 @@ jobs:
     environment:
       name: "ur"
       url: "https://${{ needs.ur_deploy.outputs.url }}"
-    needs: [ui_tests_pr_env]
+    needs: [ui_tests_ur_env]
     steps:
       - name: End of UR Deployment Workflow
         run: |
