--- a/.github/workflows/workflow_deploy_to_ur_environment.yml
+++ b/.github/workflows/workflow_deploy_to_ur_environment.yml
@@ -30,8 +30,8 @@ jobs:
     name: Docker Build, Scan and Push
     uses: ./.github/workflows/docker_job.yml
     with:
-      tag: ${{ input.tag_to_deploy }}
-      checkout_tag : ${{ input.tag_to_deploy }}
+      tag: ${{ inputs.tag_to_deploy }}
+      checkout_tag : ${{ inputs.tag_to_deploy }}
 
   ui_tests_image:
     name: Run Cypress UI Tests On Images
@@ -39,18 +39,18 @@ jobs:
     needs: [docker_build_scan_push]
     with:
       run_against_image: true
-      tag: ${{ input.tag_to_deploy}}
-      checkout_tag: ${{ input.tag_to_deploy}}
+      tag: ${{ inputs.tag_to_deploy}}
+      checkout_tag: ${{ inputs.tag_to_deploy}}
     secrets: inherit # pragma: allowlist secret
 
   ur_deploy:
-      name: PR Environment Deploy
+      name: UR Environment Deploy
       needs: [ui_tests_image]
       uses: ./.github/workflows/terraform_environment_job.yml
       with:
         workspace_name: ur
-        version_tag: ${{ input.tag_to_deploy}}
-        checkout_tag: ${{ input.tag_to_deploy}}
+        version_tag: ${{ inputs.tag_to_deploy}}
+        checkout_tag: ${{ inputs.tag_to_deploy}}
       secrets: inherit # pragma: allowlist secret
 
   ui_tests_ur_env:
@@ -60,15 +60,15 @@ jobs:
     with:
       run_against_image: false
       base_url: "https://${{ needs.ur_deploy.outputs.url }}"
-      tag: ${{ input.tag_to_deploy}}
-      checkout_tag: ${{ input.tag_to_deploy}}
+      tag: ${{ inputs.tag_to_deploy}}
+      checkout_tag: ${{ inputs.tag_to_deploy}}
     secrets: inherit # pragma: allowlist secret
 
   always_remove_ingress:
     name: Remove CI ingress from environment
     if: always()
     uses: ./.github/workflows/remove_ingress_job.yml
-    needs: [ui_tests_pr_env]
+    needs: [ui_tests_ur_env]
     secrets: inherit # pragma: allowlist secret
 
   end_of_ur_deployment_workflow:
@@ -77,7 +77,7 @@ jobs:
     environment:
       name: "ur"
       url: "https://${{ needs.ur_deploy.outputs.url }}"
-    needs: [ui_tests_pr_env]
+    needs: [ui_tests_ur_env]
     steps:
       - name: End of UR Deployment Workflow
         run: |
