--- a/.github/workflows/docker_job.yml
+++ b/.github/workflows/docker_job.yml
@@ -25,13 +25,26 @@ jobs:
   docker_build_scan_push:
     runs-on: ubuntu-latest
     steps:
+      - uses: unfor19/install-aws-cli-action@v1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1.7.0
+        with:
+          aws-region: eu-west-1
+          role-to-assume: arn:aws:iam::311462405659:role/modernising-lpa-github-actions-ecr-push
+          role-duration-seconds: 900
+          role-session-name: GithubActionsECRPushMLPAB
+      - name: ECR Login
+        id: login_ecr
+        uses: aws-actions/amazon-ecr-login@v1.5.3
+        with:
+          registries: 311462405659
       - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.checkout_tag }}
       - name: Build Image
         id: build_image
         run: |
-          docker build -t app .
+          docker build --cache-from $ECR_REGISTRY/$ECR_REPOSITORY -t app .
       - name: Trivy Image Vulnerability Scanner
         id: trivy_scan
         uses: aquasecurity/trivy-action@0.9.1
@@ -46,19 +59,6 @@ jobs:
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
-      - uses: unfor19/install-aws-cli-action@v1
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1.7.0
-        with:
-          aws-region: eu-west-1
-          role-to-assume: arn:aws:iam::311462405659:role/modernising-lpa-github-actions-ecr-push
-          role-duration-seconds: 900
-          role-session-name: GithubActionsECRPushMLPAB
-      - name: ECR Login
-        id: login_ecr
-        uses: aws-actions/amazon-ecr-login@v1.5.3
-        with:
-          registries: 311462405659
       - name: Push Container
         env:
           ECR_REGISTRY: ${{ steps.login_ecr.outputs.registry }}
