--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -102,7 +102,7 @@ jobs:
       aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_ACTIONS }}
       aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ACTIONS }}
       cypress_record_key: ${{ secrets.CYPRESS_RECORD_KEY }}
-      github_token: ${{ secrets.GITHUB_TOKEN }}
+      github_access_token: ${{ secrets.GITHUB_TOKEN }}
 
 
   pr_deploy:
