dont' require them for now

--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -34,10 +34,10 @@ on:
         required: true
       cypress_record_key:
         description: 'Cypress Record Key'
-        required: true
+        required: false
       github_access_token:
         description: 'Github Token'
-        required: true
+        required: false
 
 defaults:
   run:
